--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 
 
 
- 
+
+   
 
   {
     "headers": [
       {
         "source": "/api/(.*)",
         "headers": [
-          { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate" },
+          {
+            "key": "Cache-Control",
+            "value": "no-store, no-cache, must-revalidate, proxy-revalidate"
+          },
           { "key": "Pragma", "value": "no-cache" },
           { "key": "Expires", "value": "0" }
         ]
