--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^6.9.15",
     "quill": "^1.3.7",
     "quill-image-resize-module-react": "^3.0.0",
+    "qrcode.react": "^3.1.0",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
